# zod-ngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.c  main.c  test.ini
lib/: minunit.h
modules/: carg.h  carg_to_cvar.h  cvar.h  cvar_load.h  cvar_load_test.c  file_buffer.h  file_watcher.h  file_watcher_test.c  index.h  ini.h  ini_test.c  log.h  module_config.h  modules_config.h  scf.h  simple_font.h  string_view.h  string_view_test.c  test_carg.c  test_carg_to_cvar.c  test_cvar.c  test_cvar_load.c  test_cvar_load_typed.c  test_file_buffer.c  test_file_watcher.c  test_ini.c  test_log.c  test_scf.c  test_simple_font.c  types.h
modules/collections/: array_list.h  test_array_list.c
ngine/: clock.h  common.h  config.h  console.h  engine_context.h  engine_run.c  g_config.h  index.h  input.h  ngine_config.h  render.h  render_text.h  window.h  zod_error.h  zod_ngine.h  zod_ngine_run.c
ngine.core/: clock.h  cmd_manager.h  config.h  engine_context.h  index.h  input.h  ngine_config.h  render.h  render_text.h  version.h  window.h  zod_error.h  zod_ngine.h
ngine.core/internal/clock/: clock.c
ngine.core/internal/cmd_manager/: cmd_manager.c  cmd_manager_internal.h  sys_cmd.c
ngine.core/test/: test_clock.c  test_cmd_manager.c  test_config.c  test_render_dispatch.c  test_render_text.c  test_window.c  test_zod_ngine_init.c
ngine.example/: engine_run_example.c
ngine.ext.console/: console.h  console_config.h  index.h
ngine.ext.console/test/: test_console.c
ngine.lib/: carg.h  command.h  cvar.h  cvar_load.h  cvar_parser.h  file_buffer.h  file_watcher.h  index.h  log.h  modules_config.h  simple_font.h  string_view.h  test_carg.c  test_carg_to_cvar.c  test_command.c  test_cvar.c  test_cvar_load.c  test_cvar_load_typed.c  test_file_buffer.c  test_file_watcher.c  test_ini.c  test_log.c  test_scf.c  test_simple_font.c  test_string_view.c  types.h
ngine.lib/collections/: array_list.h  test_array_list.c
ngine/internal/: engine_context_internal.c  g_config_internal.c  g_engine_context_internal.c  zod_error.c  zod_ngine_internal.c
ngine/test/: test_clock.c  test_config.c  test_console.c  test_render_dispatch.c  test_window.c  test_zod_ngine_init.c
resources/learning-opengl/: Makefile  build.c
run-tree/data/: engine.scf  test.ini  test.scf
(+78 files in other folders)
